# aeropi-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config
ansible/: hosts  playbook.yml
data/: gpio.service  gpio.toml  wpa_supplicant.example.conf
scripts/: raspbian.sh
src/: config.rs  controller.rs  i2c.rs  led.rs  lib.rs  main.rs  math.rs  motors.rs  self_test.rs  socket.rs  status_monitor.rs  utils.rs
src/math/: frames.rs  mod.rs  vec3.rs
src/sensors/: accelerometer.rs  hcsr04.rs  lsm303d.rs  mod.rs  utils.rs
