[package]
name = "aeropi"
version = "0.1.0"
authors = ["Michael Spencer <sonrisesoftware@gmail.com>"]

[dependencies]
sysfs_gpio = "0.5.1"
lazy_static = "1.0.0"
floating-duration = "0.1.1"
i2cdev = "0.3.1"
nalgebra = "0.13.1"
ws = "0.7.3"
serde = "1.0.26"
serde_json = "1.0.8"
ctrlc = "3.0.3"
eventual = "0.1.7"
